# geant4_pybind

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  DESIGN.md  MANIFEST.in  Manifest.in  README.md  pyproject.toml  setup.py
source/: CMakeLists.txt  datainit.py  geant4_pybind.cc  holder.hh  opaques.hh  typecast.hh
source/analysis/: pyG4AnalysisManager.cc  pyG4TScoreNtupleWriter.cc  pyG4VAnalysisManager.cc  pyhisto.cc  pymodG4analysis.cc
source/digits_hits/: pyG4HCofThisEvent.cc  pyG4MultiFunctionalDetector.cc  pyG4MultiSensitiveDetector.cc  pyG4SDFilter.cc  pyG4SDManager.cc  pyG4Scorer.cc  pyG4VHit.cc  pyG4VHitsCollection.cc  pyG4VPrimitivePlotter.cc  pyG4VPrimitiveScorer.cc  pyG4VSDFilter.cc  pyG4VSensitiveDetector.cc  pymodG4digits_hits.cc
source/event/: pyG4AdjointPosOnPhysVolGenerator.cc  pyG4AdjointPrimaryGenerator.cc  pyG4AdjointStackingAction.cc  pyG4ClassificationOfNewTrack.cc  pyG4EvManMessenger.cc  pyG4Event.cc  pyG4EventManager.cc  pyG4GeneralParticleSource.cc  pyG4GeneralParticleSourceData.cc  pyG4GeneralParticleSourceMessenger.cc  pyG4HEPEvtInterface.cc  pyG4HEPEvtParticle.cc  pyG4MultiEventAction.cc  pyG4ParticleGun.cc  pyG4ParticleGunMessenger.cc  pyG4PrimaryTransformer.cc  pyG4RayShooter.cc  pyG4SPSAngDistribution.cc  pyG4SPSEneDistribution.cc  pyG4SPSPosDistribution.cc  pyG4SPSRandomGenerator.cc  pyG4SingleParticleSource.cc  pyG4SmartTrackStack.cc  pyG4StackChecker.cc  pyG4StackManager.cc  pyG4StackedTrack.cc  pyG4StackingMessenger.cc  pyG4TrackStack.cc  pyG4TrajectoryContainer.cc  pyG4UserEventAction.cc  pyG4UserStackingAction.cc  pyG4VPrimaryGenerator.cc  pyG4VUserEventInformation.cc  pymodG4event.cc
source/geometry/: pyG4AffineTransform.cc  pyG4BooleanSolid.cc  pyG4Box.cc  pyG4ChordFinder.cc  pyG4Cons.cc  pyG4ElectricField.cc  pyG4ElectroMagneticField.cc  pyG4Ellipsoid.cc  pyG4EllipticalCone.cc  pyG4EllipticalTube.cc  pyG4Field.cc  pyG4FieldManager.cc  pyG4GeometryManager.cc  pyG4GlobalMagFieldMessenger.cc  pyG4Hype.cc  pyG4IntersctionSolid.cc  pyG4LogicalVolume.cc  pyG4MagneticField.cc  pyG4NavigationHistory.cc  pyG4Navigator.cc  pyG4Orb.cc  pyG4PVParameterised.cc  pyG4PVPlacement.cc  pyG4PVReplica.cc  pyG4Para.cc  pyG4Polycone.cc  pyG4Polyhedra.cc  pyG4Region.cc  pyG4Sphere.cc  pyG4SubtractionSolid.cc  pyG4Tet.cc  pyG4Torus.cc  pyG4TouchableHistory.cc  pyG4TransportationManager.cc  pyG4Trap.cc  pyG4Trd.cc  pyG4Tubs.cc  pyG4TwistedBox.cc  pyG4TwistedTrap.cc  pyG4TwistedTrd.cc  (+9 more)
source/global/: pyG4ApplicationState.cc  pyG4Exception.cc  pyG4ExceptionHandler.cc  pyG4ExceptionSeverity.cc  pyG4GeometryTolerance.cc  pyG4PhysicalConstants.cc  pyG4PhysicsFreeVector.cc  pyG4PhysicsVector.cc  pyG4RandomDirection.cc  pyG4RotationMatrix.cc  pyG4StatAnalysis.cc  pyG4StateManager.cc  pyG4SystemOfUnits.cc  pyG4ThreeVector.cc  pyG4Timer.cc  pyG4Transform3D.cc  pyG4TwoVector.cc  pyG4UnitsTable.cc  pyG4UserLimits.cc  pyG4Version.cc  pyRandomEngines.cc  pyRandomize.cc  pygeomdefs.cc  pyglobals.cc  pymodG4global.cc
source/graphics_reps/: pyG4AttDef.cc  pyG4AttDefStore.cc  pyG4AttValue.cc  pyG4Circle.cc  pyG4Colour.cc  pyG4Square.cc  pyG4Text.cc  pyG4TypeKey.cc  pyG4VMarker.cc  pyG4VVisManager.cc  pyG4VisAttributes.cc  pyG4Visible.cc  pymodG4graphics_reps.cc
source/intercoms/: pyG4GenericMessenger.cc  pyG4UIcmdWith3Vector.cc  pyG4UIcmdWith3VectorAndUnit.cc  pyG4UIcmdWithABool.cc  pyG4UIcmdWithADouble.cc  pyG4UIcmdWithADoubleAndUnit.cc  pyG4UIcmdWithALongInt.cc  pyG4UIcmdWithAString.cc  pyG4UIcmdWithAnInteger.cc  pyG4UIcmdWithoutParameter.cc  pyG4UIcommand.cc  pyG4UIcommandStatus.cc  pyG4UIcommandTree.cc  pyG4UIdirectory.cc  pyG4UImanager.cc  pyG4UImessenger.cc  pyG4UIparameter.cc  pymodG4intercoms.cc
source/interface/: pyG4UIExecutive.cc  pyG4VUIshell.cc  pymodG4interface.cc
source/materials/: OpaqueTypes.hh  pyG4AtomicBond.cc  pyG4AtomicFormFactor.cc  pyG4AtomicShells.cc  pyG4AtomicShells_XDB_EADL.cc  pyG4CrystalAtomBase.cc  pyG4CrystalExtension.cc  pyG4CrystalUnitCell.cc  pyG4Element.cc  (+33 more)
(+385 files in other folders)
